@@ -1,1 +1,1 @@
-DIST bijiben-3.16.2.tar.xz 658656 SHA256 39c97690e6d0bbed343b2283ea184c89fd49f3c4309af7f56e1b494efd0fd98a SHA512 59e56a961ad66e90e2267ffeb0cdeab312720e82e2a0fb3e78fc1908478f42d657b81b7a3099121a36e150997cdae177f0b25db7e8fb664311550c2d79fab6de WHIRLPOOL 710db7f418be48ead556de0e059f39428bde6277a40174379f797953c8dea20b72ebda15db505cc044fff19df6636932f30b481eae271664ca357825ae8d171a
+DIST bijiben-3.18.0.tar.xz 666396 SHA256 3e933eae3776ae50a639f0866b5c11279961b5ebdaa83a621509dfe31c218fea SHA512 c1880fe3a907fec5f6c06e586185ec2e5cba4dfaa62f14bc2789c1d9f30bdafdfad3de18c4e8d7bff1f0ee8f43cb1c627ea88fdf2efd21e5a5e2b6be9ee0051e WHIRLPOOL f6f5bf3a0ef1df36d02682d6950a05d71d391ba87c5560ec3e25e820e09d202a5b544184f633b256975ca3ef3e35429a2077044ac0324ebcd463c32393e2db02
